Add plain message for bus